src/components/UnsplashSection.module.scss
.sect {
  display: flex;
  padding: var(--spacing-lg);
  padding-right: 0;
  gap: var(--spacing-lg);
  border-bottom: var(--border-dashed-default);
  overflow: hidden;

  @media (max-width: 600px) {
    flex-direction: column;
  }
}

.left {
  width: 300px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  flex-shrink: 0;

  @media (max-width: 600px) {
    width: 100%;
  }

  & > .top {
    display: flex;
    flex-direction: column;
    gap: var(--spacing-xs);

    & > h2,
    & > p {
      margin: 0;
    }

    & > h2 {
      font-size: 25px;
      font-weight: 400;

      & > strong {
        font-weight: 500;
        color: var(--text-color-primary);
      }
    }

    & > p {
    }
  }

  & > .bottom {
    display: flex;
    justify-content: space-between;
    text-decoration: none;
    color: var(--text-color-secondary);
    margin: calc(-1 * var(--spacing-lg));
    margin-top: var(--spacing-md);
    padding: var(--spacing-lg);
    font-size: 14px;
    position: relative;

    @media (max-width: 600px) {
      margin-right: 0;
    }

    &:hover,
    &:focus-visible {
      background-color: var(--background-color-secondary);

      & > strong {
        color: var(--text-color-primary);
      }
    }

    &::after {
      content: '';
      z-index: 100;
      position: absolute;

      @media not (max-width: 600px) {
        top: 0;
        bottom: 0;
        right: 0;
        width: calc(2 * var(--spacing-lg));
        background-image: linear-gradient(
          90deg,
          transparent,
          var(--background-color-primary)
        );
      }

      @media (max-width: 600px) {
        left: 0;
        bottom: 0;
        right: 0;
        height: calc(2 * var(--spacing-lg));
        background-image: linear-gradient(
          180deg,
          transparent,
          var(--background-color-primary)
        );
      }
    }

    & > span {
      z-index: 200;
    }

    & > strong {
      z-index: 200;
      font-weight: 500;
    }
  }
}

.images {
  display: flex;
  gap: var(--spacing-md);
  z-index: 300;
  overflow-x: hidden;
  position: relative;

  & .atroposImage {
    display: block;
    height: 280px;
  }

  & > .error {
    font-size: 13px;
    padding-left: var(--spacing-lg);

    & > a {
      color: var(--text-color-secondary);

      &:hover,
      &:focus-visible {
        color: var(--text-color-primary);
      }
    }
  }
}

.mask {
  z-index: 400;
  position: absolute;
  top: 0;
  bottom: 0;
  right: 0;
  padding-right: var(--spacing-sm);
  writing-mode: sideways-rl;
  pointer-events: none;
  display: flex;
  justify-content: center;
  align-items: center;

  a {
    display: block;
    pointer-events: initial;
    color: var(--text-color-secondary);
    background-color: var(--background-color-primary);
    border-radius: 999px;
    padding: var(--spacing-sm) var(--spacing-xs);
    text-decoration: none;

    &:hover,
    &:focus-visible {
      color: var(--text-color-primary);
      background-color: var(--background-color-secondary);
    }
  }
}

